minor fixes (text align)

--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@ a {
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
+  text-align: center;
   width: 480px;
 }
 
@@ -915,6 +916,8 @@ footer {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 768px) {
@@ -935,6 +938,7 @@ footer {
 @media screen and (min-width: 768px) {
   .address {
     margin-right: 165px;
+    margin-bottom: 60px;
     align-items: left;
   }
 }
@@ -1116,6 +1120,7 @@ footer {
 .modal__h2 {
   font-size: 20px;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .modal-form__label {
@@ -1153,6 +1158,7 @@ footer {
   position: absolute;
   width: 18px;
   height: 18px;
+  color: #212121;
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
