--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -8,6 +8,8 @@ footer {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 60px;
+    padding-bottom: 60px;
 
     // display: flex;
     // padding-top: 60px;
@@ -34,6 +36,7 @@ footer {
 
     @media screen and (min-width: 768px) {
         margin-right: 165px;
+        margin-bottom: 60px;
         align-items: left;
     }
 
