--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,11 +18,9 @@
     width: 450px;
     height: 609px;
 
-
     @media screen and (min-width: 1199px) {
         width: 528px;
         height: 581px;
-
     }
 
     padding: 40px;
@@ -36,7 +34,6 @@
     .is-hidden & {
         transform: translate(-50%, -50%) scale(0.8);
     }
-
 }
 
 .modal__close-btn {
@@ -60,10 +57,10 @@
     padding: 0;
 }
 
-
 .modal__h2 {
     font-size: 20px;
     margin-bottom: 30px;
+    text-align: center;
 }
 
 .modal-form__label {
@@ -80,7 +77,6 @@
     top: -18px;
     left: 0;
 }
-
 
 .modal-form__info-input {
     display: block;
@@ -99,7 +95,7 @@
         border-color: $accent-color;
     }
 
-    &:focus-within~.modal-form__input-icon {
+    &:focus-within ~ .modal-form__input-icon {
         color: $accent-color;
     }
 }
@@ -109,6 +105,8 @@
 
     width: 18px;
     height: 18px;
+
+    color: $title-text-color;
 
     top: 50%;
     left: 12px;
@@ -147,7 +145,6 @@
 }
 
 .modal-form__label-checkbox {
-
     position: relative;
     margin-left: auto;
     margin-right: auto;
@@ -159,9 +156,7 @@
     @media screen and (min-width: 1200px) {
         font-size: 14px;
     }
-
 }
-
 
 .modal-form__check-input {
     appearance: none;
@@ -181,7 +176,7 @@
     background-color: inherit;
     background-image: url("data:image/svg+xml,%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2222 1.66667V13.3333H1.77778V1.66667H14.2222ZM14.2222 0H1.77778C0.8 0 0 0.75 0 1.66667V13.3333C0 14.25 0.8 15 1.77778 15H14.2222C15.2 15 16 14.25 16 13.3333V1.66667C16 0.75 15.2 0 14.2222 0Z' fill='%23212121'/%3E%3C/svg%3E%0A");
 
-    .modal-form__check-input:checked+& {
+    .modal-form__check-input:checked + & {
         background-color: $accent-color;
         background-image: url("data:image/svg+xml,%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.95703 7.75166L3.88825 7.68604L3.81923 7.75141L2.93123 8.59258L2.85486 8.66492L2.93097 8.73753L6.42671 12.0724L6.49574 12.1382L6.56476 12.0724L14.069 4.91352L14.1449 4.84116L14.069 4.76881L13.1873 3.92764L13.1183 3.86183L13.0493 3.92761L6.49577 10.1735L3.95703 7.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E%0A");
     }
