--- a/sass/utils/_utilyty-classes.scss
+++ b/sass/utils/_utilyty-classes.scss
@@ -59,7 +59,7 @@ a {
     margin-right: auto;
     margin-top: 0;
     margin-bottom: 0;
-    // text-align: center;
+    text-align: center;
 
     width: 480px;
 
